<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RobotsPEC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="escull_tag">testing git</string>
	<string name="autobot_tag">Autobot</string>
	<string name="decepticon_tag">Decepticon</string>
	
	<string name="enrere_tag">Enrere</string>
	<string name="shoot">Shoot</string>
	<string name="foto">Foto</string>
	<string name="stop">Stop</string>
	<string name="left">Left</string>
	<string name="right">Right</string>
	<string name="forward">Forward</string>
	<string name="backward">Backward</string>
	<string name="Debugger">Debugger</string>
	<string name="contra">contra</string>
	<string name="NADA"></string>
	
</resources>